[FIX] - Ajustando a largura da scrollbar

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -50,7 +50,7 @@ body {
 body.no-scroll {
   overflow: hidden;
   height: 100vh;
-  padding-right: 3px;
+  padding-right: var(--scrollbar-width);
 }
 
 h1,
